--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "koa-static": "^4.0.0",
     "koa2-cors": "^2.0.5",
     "md5": "^2.2.1",
+    "multer": "^1.4.1",
     "mysql": "2.x",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
