--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "async": "0.2.9",
+    "chai": "^4.2.0",
     "jsonwebtoken": "^8.1.0",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
@@ -21,10 +22,12 @@
     "koa-router": "^7.2.1",
     "koa2-cors": "^2.0.5",
     "md5": "^2.2.1",
+    "mocha": "^5.2.0",
     "mysql": "2.x",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "socket.io": "^2.0.3",
+    "supertest": "^3.3.0",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
