--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,9 @@
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
     "koa-cors": "0.0.16",
+    "koa-mount": "^4.0.0",
     "koa-router": "^7.2.1",
+    "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.5",
     "md5": "^2.2.1",
     "mocha": "^5.2.0",
